# cmake_porject_template

./: CMakeLists.txt  run.sh
